# try_meson

./: cross-compile_help.txt  main.c  meson.build
config/: meson.build  mt_config.h
config/rpi/: rpi2_linux_gcc
include/: common.h
lib/: meson.build
lib/boo/: boo.c  boo.h  meson.build
lib/foo/: foo.c  foo.h  meson.build
